feat(/src/main/resources/): 설정 추가 및 기본 페이지 설정

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <title>Title</title>
-</head>
-<body>
-<p>I'm Footer.</p>
-</body>
+<html xmlns:th="http://www.thymeleaf.org">
+<div class="footer" th:fragment="footer">
+    <p>&copy; Hello Shop V2</p>
+</div>
 </html>
