--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -6,8 +6,9 @@
 </head>
 <body>
     <div class="container">
-        <div th:replace="fragments/bodyHeader :: bodyHeader"></div>
-        <p>BodyPart</p>
+        <div th:replace="fragments/nav :: nav"></div>
+        <div th:replace="fragments/subHeader :: subHeader(Home)"></div>
+        <p>You're in home now.</p>
     </div>
 </body>
 </html>
